tests/semantic/pass/function-var.tiger
let
	function a () : int = 0
	var a := a ()
in
end
