tests/semantic/fail/return-type-affectation.tiger
let
      var x : string = ""
      function f() : int = (
            0
      )
in
      x := f()
end
